# PcsetCalc

./: .gitignore  README.md  pcsetcalc_app.py  pcsetcalc_connection_ui.py  pcsetcalc_main_ui.py  pcsetcalc_resources_rc.py  preferences.json  pyproject.toml
IconDesign/: PCSetCalc_IconDesign.maxpat
QtDesigner/: ConversionCommands.txt  PCSetCalc_Connection.ui  PCSetCalc_Main.ui  pcsetcalc_resources.qrc
