[tool.poetry]
name = "pcsetcalc"
version = "0.1.0"
description = ""
authors = ["Yota Kobayashi <yota@programsounds.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.5.2"
pcpy = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
